--- a/src/html/home.html
+++ b/src/html/home.html
@@ -9,6 +9,7 @@
 	<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="../js/home.js"></script>
+	<!-- <script src="../js/me.js"></script> -->
 	<!-- 自己写的 -->
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/home.css"/>
@@ -52,7 +53,7 @@
 		</div>
 		<div class="fi_search_right">
 			<form action="">
-				<input type="text" placeholder="请输入关键词">
+				<input type="text" id="fi_login" placeholder="请输入关键词">
 			</form>
 			<ul>
 				<li>热门&nbsp;:&nbsp;</li>
@@ -69,10 +70,11 @@
 	</div>
 
 	<!-- banner -->
-	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active">
+    </li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
   </ol>
 
@@ -88,6 +90,9 @@
       <div class="carousel-caption">
       </div>
     </div>
+  </div>
+  <div class="fi_banner">
+  	
   </div>
 </div>
 <!-- fi_box -->
@@ -105,13 +110,13 @@
 		<div class="fi_shop_top">
 			<ul>
 				<li class="fi_shop_top_left"><img src="../imgs/home/t4.png"></li>
-				<li class="fi_shop_top_right">更多&nbsp;&gt;</li>
+				<li class="fi_shop_top_right"><a href="#">更多&nbsp;&gt;</a></li>
 			</ul>
 		</div>
 		<div class="fi_shop_center">
 			<ul>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop1.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -119,7 +124,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop2.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -127,7 +132,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop3.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -135,7 +140,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop4.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -143,7 +148,7 @@
 					</a>
 				</li>
 				<li class="fi_shop_center_point">
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop5.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -153,7 +158,7 @@
 			</ul>
 			<ul>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop6.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -161,7 +166,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 					 	<div><img src="../imgs/home/shop7.jpg" alt=""></div>
 						 <p>欢乐时光水果礼篮</p>
 						 <h6>¥188.00/1份</h6>
@@ -169,7 +174,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop8.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -177,7 +182,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop9.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -185,7 +190,7 @@
 					</a>
 				</li>
 				<li class="fi_shop_center_point">
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop10.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -203,13 +208,13 @@
 		<div class="fi_shop_top">
 			<ul>
 				<li class="fi_shop_top_left"><img src="../imgs/home/t5.png"></li>
-				<li class="fi_shop_top_right">更多&nbsp;&gt;</li>
+				<li class="fi_shop_top_right"><a href="#">更多&nbsp;&gt;</a></li>
 			</ul>
 		</div>
 		<div class="fi_shop_center">
 			<ul>
 				<li>
-					<a href="#">
+					<a href="javascipt:;">
 						<div><img src="../imgs/home/shop11.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -217,7 +222,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop12.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -225,7 +230,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop13.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -233,7 +238,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop14.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -241,7 +246,7 @@
 					</a>
 				</li>
 				<li class="fi_shop_center_point">
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop15.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -251,7 +256,7 @@
 			</ul>
 			<ul>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop16.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -259,7 +264,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop17.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -267,7 +272,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop18.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -275,7 +280,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop19.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -283,7 +288,7 @@
 					</a>
 				</li>
 				<li class="fi_shop_center_point">
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop20.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -301,13 +306,13 @@
 		<div class="fi_shop_top">
 			<ul>
 				<li class="fi_shop_top_left"><img src="../imgs/home/t6.png"></li>
-				<li class="fi_shop_top_right">更多&nbsp;&gt;</li>
+				<li class="fi_shop_top_right"><a href="#">更多&nbsp;&gt;</a></li>
 			</ul>
 		</div>
 		<div class="fi_shop_center">
 			<ul>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop21.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -315,7 +320,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop22.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -323,7 +328,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop23.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -331,7 +336,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop24.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -339,7 +344,7 @@
 					</a>
 				</li>
 				<li class="fi_shop_center_point">
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop25.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -349,7 +354,7 @@
 			</ul>
 			<ul>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop26.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -357,7 +362,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop27.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -375,13 +380,13 @@
 		<div class="fi_shop_top">
 			<ul>
 				<li class="fi_shop_top_left"><img src="../imgs/home/t7.png"></li>
-				<li class="fi_shop_top_right">更多&nbsp;&gt;</li>
+				<li class="fi_shop_top_right"><a href="#">更多&nbsp;&gt;</a></li>
 			</ul>
 		</div>
 		<div class="fi_shop_center">
 			<ul>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop31.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -389,7 +394,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop32.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -397,7 +402,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop33.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -405,7 +410,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop34.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -413,7 +418,7 @@
 					</a>
 				</li>
 				<li class="fi_shop_center_point">
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop35.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -423,7 +428,7 @@
 			</ul>
 			<ul>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop36.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -431,7 +436,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop37.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -439,7 +444,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop38.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -447,7 +452,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop39.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -455,7 +460,7 @@
 					</a>
 				</li>
 				<li class="fi_shop_center_point">
-					<a href="#">
+					<a href="javascript:;">
 						<div><img src="../imgs/home/shop40.jpg" alt=""></div>
 						<p>欢乐时光水果礼篮</p>
 						<h6>¥188.00/1份</h6>
@@ -488,26 +493,83 @@
 	<div class="fi_footer_center">
 		<div class="fi_footer_center_con">
 			<div class="fi_footer_center_left">
-				<img class="fi_footer_maone" src="../imgs/home/ma1.jpg" alt=""/>
-				<img class="fi_footer_matwo" src="../imgs/home/ma2.jpg" alt=""/>
+				<div class="fi_footer_maone">
+					<img src="../imgs/home/ma1.jpg" alt=""/>
+					<span>天天果园官方微信</span>
+				</div>
+				<div class="fi_footer_matwo">
+					<img src="../imgs/home/ma2.jpg" alt=""/>
+					<span>天天果园APP</span>
+				</div>
 			</div>
 			<div class="fi_footer_center_right">
 				<ul>
 					<li>
 						<dl>
 							<dt>购物指南</dt>
-							<dd>新用户注册</dd>
-							<dd>新用户注册</dd>
-							<dd>新用户注册</dd>
+							<a href="javascript:;"><dd>新用户注册</dd></a>
+							<a href="#"><dd>在线下单</dd></a>
+							<a href="#"><dd>支付方式</dd></a>
 						</dl>
 					</li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li>
+						<dl>
+							<dt>购物指南</dt>
+							<a href="#"><dd>新用户注册</dd></a>
+							<a href="#"><dd>在线下单</dd></a>
+							<a href="#"><dd>支付方式</dd></a>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>购物指南</dt>
+							<a href="#"><dd>新用户注册</dd></a>
+							<a href="#"><dd>在线下单</dd></a>
+							<a href="#"><dd>支付方式</dd></a>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>购物指南</dt>
+							<a href="#"><dd>新用户注册</dd></a>
+							<a href="#"><dd>在线下单</dd></a>
+							<a href="#"><dd>支付方式</dd></a>
+						</dl>
+					</li>
 				</ul>
 			</div>
 		</div>
 	</div>
+	<div class="fi_footer_bottom">
+		<p>版权所有 ©2018上海天天鲜果电子商务有限公司  保留所有权利 | <a href="#" class="aaa">沪ICP备12042163</a></p>
+		<h6>天天果园&nbsp;鲜果网购</h6>
+		<a href="#"class="bbb">
+			<img src="../imgs/home/guan_shgs.gif" alt=""/>&nbsp;
+			<img src="../imgs/home/guan_wgdjp.png" alt=""/>
+		</a>
+	</div>
+</div>
+<div class="fi_fix">
+	<a href="#" class="exchange"></a>
+	<a href="#" class="advisory"></a>
+	<a href="#" class="return_top"></a>
+</div>
+<div class="pop-up">
+	<div class="pop_up_top">
+		<a href="javascript:;">×</a>
+	</div>
+	<div class="pop_up_center">
+		<h1></h1>
+		<h2>加入购物车成功</h2>
+	</div>
+	<div class="pop_up_middle">
+		<p>购物车共</p>
+		<span class="fi_add">0</span>
+		<p>件商品|商品共计</p>
+		<span class="fi_money">¥0</span>
+	</div>
+	<a href="#" id="login_one">继续购物</a>
+	<a href="www.baidu.com" id="login_two">去结算</a>
 </div>
 </body>
 </html>
