--- a/src/html/eat.html
+++ b/src/html/eat.html
@@ -13,5 +13,261 @@
 			<img src="../imgs/eat/fo_banner1.jpg" alt=""/>
 		</div>
 	</div>
+	<div class="fo_section">
+		<div class="fo_section_top">
+			<div class="fo_eat_goods">
+				<img src="../imgs/eat/fo_eat.jpg" alt=""/>
+			</div>
+			<ul id="fo_list">
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_2.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_3.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_1.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_4.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_5.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_6.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_7.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_8.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+			</ul>
+		</div>
+				<div class="fo_section_top">
+			<div class="fo_eat_goods">
+				<img src="../imgs/eat/fo_eat.jpg" alt=""/>
+			</div>
+			<ul id="fo_list">
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_2.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_3.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_1.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_4.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_5.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_6.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_7.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_8.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+			</ul>
+		</div>
+				<div class="fo_section_top">
+			<div class="fo_eat_goods">
+				<img src="../imgs/eat/fo_eat.jpg" alt=""/>
+			</div>
+			<ul id="fo_list">
+				<a href="javascript:;">
+					<li id="fo_box">
+						<div>
+						<img src="../imgs/eat/fo_1.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_4.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_5.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li  id="fo_box">
+						<div>
+						<img src="../imgs/eat/fo_6.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_7.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+				<a href="javascript:;">
+					<li>
+						<div>
+						<img src="../imgs/eat/fo_8.jpg" alt=""/>
+						</div>
+						<h2>新奇士晚熟脐橙巨无霸</h2>
+						<p>¥199.00/22个</p>
+						<h3><img src="../imgs/eat/add2cart.svg" alt=""></h3>
+					</li>
+				</a>
+			</ul>
+		</div>
+	</div>
+	<!-- fo_footer -->
+	<div class="fo_footer">
+		<div class="fo_footer_con">
+			<a href="#">
+				<img src="../imgs/eat/fo_footer.jpg" alt=""/>
+			</a>
+		</div>
+	</div>
+	<div class="fo_ding">
+		<a href="#">
+			<img src="../imgs/eat/backtop.png" alt=""/>
+		</a>
+	</div>
 </body>
 </html>
