--- a/src/html/fun.html
+++ b/src/html/fun.html
@@ -82,13 +82,19 @@
 			<div class="ceng">
 				<div class="ceng_left">
 					<div class="ceng_left_left">
-							<img src="../imgs/fun/ceng1.jpg"/>
+							<img class="jingzi_ctiv" src="../imgs/fun/ceng1.jpg"/>
 							<img src="../imgs/fun/ceng2.jpg"/>
 							<img src="../imgs/fun/ceng3.jpg"/>
 							<img src="../imgs/fun/ceng4.jpg"/>
 					</div>
 					<div class="ceng_left_right">
-						<img src="../imgs/fun/cengmax1.jpg">
+						<ul id="jingzi">
+							<li class="jingzi_active"><img src="../imgs/fun/ceng1.jpg"></li>
+							<li><img src="../imgs/fun/ceng2.jpg"></li>
+							<li><img src="../imgs/fun/ceng3.jpg"></li>
+							<li><img src="../imgs/fun/ceng4.jpg"></li>
+						</ul>
+						
 					</div>
 				</div>
 				<div class="ceng_right">
