--- a/src/html/register.html
+++ b/src/html/register.html
@@ -9,7 +9,7 @@
 	<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-	<!-- <script src="../js/me.js"></script> -->
+	<script src="../js/home.js"></script>
 	<!-- 自己写的 -->
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/register.css"/>
@@ -39,6 +39,21 @@
 
 	<!-- search -->
 	<div class="fi_search">
+		<div class="me_address">
+			<ul>
+				<li class="fi_a">热门城市:</li>
+				<li class="fi_b">上海&nbsp;广州&nbsp;兰州&nbsp;西安&nbsp;深圳&nbsp;</li>
+				<li class="fi_a">选择城市:</li>
+				<li class="fi_c">上海</li>
+				<li class="fi_c">上海</li>
+				<li class="fi_c">上海</li>
+				<li class="fi_c">上海</li>
+				<li class="fi_c">上海</li>
+				<li class="fi_c">上海</li>
+				<li class="fi_c">上海</li>
+				<li class="fi_c">上海</li>
+			</ul>
+		</div>
 		<div class="fi_search_left">
 			<a href="#"></a>
 		</div>
